crates/hir-def/tests/snapshots/kotlin_lower_snapshots__kotlin_empty_file.snap
---
source: crates/hir-def/tests/kotlin_lower_snapshots.rs
expression: out
---
SOURCE:

PARSE_ERRORS:
<none>
ITEM_TREE:
file (kotlin)
