crates/hir-def/tests/snapshots/kotlin_lower_snapshots__kotlin_enum_class.snap
---
source: crates/hir-def/tests/kotlin_lower_snapshots.rs
expression: out
---
SOURCE:

enum class Direction(val deg: Int) {
    NORTH(0),
    EAST(90) {
        override fun opposite(): Direction = WEST
    },
    WEST(270);

    open fun opposite(): Direction = this
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (kotlin)
enum class Direction @1..183
  primary constructor(deg: Int) @21..35
  val deg: Int @22..34
  entry NORTH(…) @42..50
  entry EAST(…) @56..122
    fun opposite(): Direction override @75..116
  entry WEST(…) @128..137
  fun opposite(): Direction open @144..181
