crates/hir-def/tests/snapshots/kotlin_lower_snapshots__kotlin_file_annotations.snap
---
source: crates/hir-def/tests/kotlin_lower_snapshots.rs
expression: out
---
SOURCE:

@file:JvmName("FooKt")
@file:Suppress("UNUSED")

package com.example

PARSE_ERRORS:
<none>
ITEM_TREE:
file (kotlin) package com.example
file annotation @1..24
file annotation @24..50
